<resources>
    <string name="app_name">24CBLhss</string>
    <string name="label_name">CBDHS TB Referral Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_to_your_account">LOGIN HERE</string>
    <string name="login_text">Login</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="splash">Splash</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="home">Home</string>
    <string name="search_patient">Search Patient</string>
    <string name="register_patient">Register Patient</string>
    <string name="referrals">Referrals</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="register_patient_review">Register Patient Review</string>
    <string name="refer_patient">Refer Patient</string>
    <string name="patient_card">Patient Card</string>
    <string name="referral_info">Referral Info</string>
    <string name="clinical_info_section_i">Clinical Info Section I</string>
    <string name="clinical_info_section_ii">Clinical Info Section II</string>
    <string name="clinical_info_section_iii">Clinical Info Section III</string>
    <string name="refer_patient_review">Refer Patient Review</string>
    <string name="acknowledgement_form_review">Acknowledgement Form Review</string>
    <string name="referral_details">Referral Details</string>
    <string name="success">Success</string>
    <string name="query_hint_patient_search">Enter Patient Name</string>
    <string name="to">To</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="from">From</string>
    <string name="close_date_picker">Close Date Picker</string>
    <string name="total_patients_0">Total Patients: 0</string>
    <string name="njuguna_sarafina">Njuguna Sarafina</string>
    <string name="name">Name</string>
    <string name="crossborder_id">CrossBorder ID:</string>
    <string name="_072bedf">072bedf</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="_2024_03_04">2024-03-04</string>
    <string name="referral_reason">Referral Reason</string>
    <string name="referral_id">Referral Id</string>
    <string name="referral_date">Referral Date</string>
    <string name="total_referrals_0">Total Referrals: 0</string>
    <string name="patient_referral_list">Patient Referral List</string>
    <string name="id_number">ID Number</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="recover_password">Recover Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="submit">Submit</string>
    <string name="profile">Profile</string>
    <string name="patients">Patients</string>
    <string name="facility_name">Facility Name</string>
    <string name="tanaka">Tanaka</string>
    <string name="enter_facility_id_and_password">Enter Facility ID and Password</string>
    <string name="add_new_patient_file">Add New Patient File</string>
    <string name="patient_file">Patient File</string>
    <string name="end_treatment">End Treatment</string>
    <string name="patient_file_2">Patient File 2</string>
    <string name="created_23_5_2023">Created 23/5/2023</string>
    <string name="end_of_treatment_form">End of Treatment Form</string>
    <string name="end_of_treatment_review">End of Treatment Review</string>
    <string name="add">Add</string>
    <string name="clinical_information">Clinical Information</string>
    <string name="clinical_info">Clinical Info</string>
    <string name="clinical_form">Clinical Form</string>
    <string name="clinical_details">Clinical Details</string>
    <string name="clinical_info_review">Clinical Info Review</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="patient_received">Patient Received</string>
    <string name="now">Now</string>
    <string name="view_form">View Form</string>
    <string name="form_details">Form Details</string>
    <string-array name="languages_array">
        <item>English</item>
        <item>French</item>
    </string-array>

</resources>