<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imgBtnUnread"
            android:layout_gravity="center"
            android:background="@drawable/ic_action_unread"
            android:layout_width="10dp"
            android:layout_height="10dp"/>

        <LinearLayout
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvNotificationTitle"
                android:layout_weight="1"
                android:text="@string/patient_received"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvNotificationDateTime"
                android:text="@string/now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvNotificationContent"
            android:text="@string/lorem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:gravity="end"
            android:layout_gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvNotificationViewForm"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:text="@string/view_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_marginTop="5dp"
        android:background="@color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

</LinearLayout>